# GridWorks_GUI

./: .gitignore  CMakeLists.txt  Grid.hpp  GridScene.cpp  GridScene.hpp  Kundur12-6.cpp  MainWindow.cpp  MainWindow.hpp  README.md  Widgets.cpp  Widgets.hpp  icons.qrc
